--- a/playbooks/vars/Ubuntu.yml
+++ b/playbooks/vars/Ubuntu.yml
@@ -9,6 +9,8 @@ ubuntu: {
   init_dir:     /etc/init,
   envs_dir:     /etc/profile.d, # http://goo.gl/ksHX6N
   bin_dir:      /usr/bin,
+  local_dir:    /usr/local,
   sudoers:      /etc/sudoers,
-  sources_list: /etc/apt/sources.list
+  sources_list: /etc/apt/sources.list,
+  bash:         /bin/bash
 }
