common.public_dns fix

--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -12,7 +12,7 @@ common: {
   },
 
   # https://developers.google.com/speed/public-dns/
-  public_dns: 8.8.8.8:53,8.8.4.4:53,
+  public_dns: "8.8.8.8:53,8.8.4.4:53",
 
   # Whether roles should start services installed
   start_service: true
