--- a/playbooks/roles/helios/tasks/master/main.yml
+++ b/playbooks/roles/helios/tasks/master/main.yml
@@ -23,4 +23,4 @@
   wait_for: port={{ helios_master_port }} timeout=10
 
 - name: Verifying Helios master HTTP endpoint
-  uri:  url=http://localhost:{{ helios_master_port }} status_code=404
+  uri:  url=http://127.0.0.1:{{ helios_master_port }} status_code=404
