--- a/playbooks/roles/helios/tasks/agent/main.yml
+++ b/playbooks/roles/helios/tasks/agent/main.yml
@@ -41,3 +41,14 @@
 
 - name: Restarting Helios agent service
   service: name=helios-agent state=restarted enabled=yes
+
+- name:     Running Helios master dig
+  command:  dig @{{ helios_master }}
+  register: dig_out
+
+- name: Verifying Helios master dig
+  assert:
+    that:
+      - "'Got answer'       in dig_out.stdout"
+      - "'QUESTION SECTION' in dig_out.stdout"
+      - "'Query time'       in dig_out.stdout"
