--- a/playbooks/helios-master-ubuntu.yml
+++ b/playbooks/helios-master-ubuntu.yml
@@ -15,5 +15,6 @@
     - { role: base,       when: periodic }
     - { role: ansible,    when: periodic }
     - { role: golang,     when: periodic }
+    - { role: skydns,     when: periodic }
     - { role: helios,     helios_role: master }
     - run-after
