--- a/playbooks/roles/helios/tasks/agent/main.yml
+++ b/playbooks/roles/helios/tasks/agent/main.yml
@@ -16,16 +16,19 @@
     url:  "{{ helios.agent.registrar_plugin.url | tokens( helios.agent.registrar_plugin ) }}"
     dest: "{{ registrar_plugin }}"
 
-- name: Creating Helios home directory
-  file: path={{ helios.agent.home }} state=directory
+- name: Creating Helios agent config directories
+  command: mkdir -p $(dirname '{{ item }}')
+  with_items:
+    - "{{ helios.agent.config }}"
+    - "{{ helios.agent.config_endpoints }}"
 
 - name: Copying Helios agent configs
   template:
     src:  "{{ item.from }}"
     dest: "{{ item.to   }}"
   with_items:
-    - { from: 'agent-config',  to: "{{ helios.agent.config }}" }
-    - { from: 'helios-config', to: "{{ helios.agent.home }}/config" }
+    - { from: 'agent-config',           to: "{{ helios.agent.config }}" }
+    - { from: 'agent-config-endpoints', to: "{{ helios.agent.config_endpoints }}" }
 
 - name: Installing Helios agent
   apt:  deb="{{ helios.home }}/helios-agent_{{ helios_version }}_all.deb"
