--- a/playbooks/roles/helios/tasks/master/main.yml
+++ b/playbooks/roles/helios/tasks/master/main.yml
@@ -2,12 +2,11 @@
 - debug: var=helios_master_port
 - debug: var=zookeeper_port
 - debug: var=registrar_port
+- debug: var=exhibitor_port
 - debug: var=domain
 
 - include: zookeeper.yml
 - include: exhibitor.yml
-- include: etcd.yml
-- include: skydns.yml
 
 - name: Copying Helios master config
   template:
